--- a/Assignment.html
+++ b/Assignment.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Write title here.</title>
+        <title>Assignment page.</title>
         <meta charset="utf-8">
     </head>
     <body>
+        <p>Some text</p>
+        <h1>Text h1</h1>
+        <h3>Text h3</h3>
+        <h6>Text h6</h6>
     </body>
 </html>
