--- a/Assignment.html
+++ b/Assignment.html
@@ -5,9 +5,19 @@
         <meta charset="utf-8">
     </head>
     <body>
+        <nav>
+            <a href="Assignment.html">Home</a>
+            <a href="Dog.html">Dog Picture</a>
+            <a href="Dog_Video.html">Dog Video</a>
+        </nav>
         <p>Some text</p>
         <h1>Text h1</h1>
         <h3>Text h3</h3>
         <h6>Text h6</h6>
+        <a href="Dog.html">Dog Image</a>
+        <a href="https://media.istockphoto.com/id/1443562748/photo/cute-ginger-cat.jpg?s=2048x2048&w=is&k=20&c=266RJoIIQDUVv1JVMaxI4mUcUX_2hzV_W_7S5IQqnBw=">Cat Image</a>
+        <main></main>
+        <img>
+        <footer></footer>
     </body>
 </html>
