--- a/Assignment.html
+++ b/Assignment.html
@@ -18,6 +18,10 @@
         <a href="https://media.istockphoto.com/id/1443562748/photo/cute-ginger-cat.jpg?s=2048x2048&w=is&k=20&c=266RJoIIQDUVv1JVMaxI4mUcUX_2hzV_W_7S5IQqnBw=">Cat Image</a>
         <main></main>
         <img>
-        <footer></footer>
+        <blockquote cite="https://en.wikipedia.org/wiki/HTML">HyperText Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser.</blockquote>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/PP7toELbdqA?si=3PwAr73IKCdHqkTu"
+         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <footer>
+        </footer>
     </body>
 </html>
