--- a/Project/index.html
+++ b/Project/index.html
@@ -3,173 +3,173 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Space Station | Resort</title>
+    <link rel="stylesheet" href="./css/share.css">
+    <link rel="stylesheet" href="./css/animations.css">
+    <title>The Space Station</title>
 </head>
 <body>
     
-    <!-- NAV -->
-    <div>
-        <div>
-            <ul>
-                <a href="#home" id="link"><li>HOME</li></a>
+    <!--NAV-->
+    <div class="wrap">
+        <div class="menu-container">
+            <ul class="menu">
+                <a href="#home"><li>HOME</li></a>
                 <a href="#gallery"><li>GALLERY</li></a>
                 <a href="#contact"><li>RESERVATIONS</li></a>
             </ul>
         </div>
     </div>
-    <!-- END NAV -->
+    <!--END NAV-->
 
-    <!--Home-->
+    <!--HOME-->
     <div id="home">
-        <div>
-            <div>
-                <span>The Space Station</span>
+        <div class="container">
+            <div class="text-center">
+                <span class="head-main">The Space Station</span>
             </div>
         </div>
     </div>
     <!--END HOME-->
 
     <!--GALLERY-->
-    <section>
-        <div id="gallery">
+    <section id="gallery">
+        <div class="container">
             <h1>Gallery</h1>
-            <div>
-
-            <!--PHOTO-CONTAINER 1-->
-            <div>
-                <div>
-                    <img src="./Images/Thumb/thumbnail_1.jpg" alt="Ooops! somthing is wrong. Try to reload the page or use another browser.">
-                    <div>
-                        <h3>Click to Enlarge</h3>
-                        <p>We have several space launches departing daily, book your flight.</p>
+            <div class="flex-container">
+                <!--PHOTO-CONTAINER 1-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./Images/Thumb/thumbnail_1.jpg" alt="">
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>We have several space launches departing daily, book flight today!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!--END PHOTOCONTAINER 1-->
+                <!--END PHOTO-CONTAINER 1-->
 
-            <!--PHOTO-CONTAINER 2-->
-            <div>
-                <div>
-                    <img src="./Images/Thumb/thumbnail_2.jpg" alt="Ooops! somthing is wrong. Try to reload the page or use another browser.">
-                    <div>
-                        <h3>Click to Enlarge</h3>
-                        <p>We have several space launches departing daily, book your flight.</p>
+                <!--PHOTO-CONTAINER 2-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./Images/Thumb/thumbnail_2.jpg" alt="">
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>We have several space launches departing daily, book flight today!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!--END PHOTOCONTAINER 2-->
+                <!--END PHOTO-CONTAINER 2-->
 
-            <!--PHOTO-CONTAINER 3-->
-            <div>
-                <div>
-                    <img src="./Images/Thumb/thumbnail_3.jpg" alt="Ooops! somthing is wrong. Try to reload the page or use another browser.">
-                    <div>
-                        <h3>Click to Enlarge</h3>
-                        <p>We have several space launches departing daily, book your flight.</p>
+                <!--PHOTO-CONTAINER 3-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./Images/Thumb/thumbnail_3.jpg" alt="">
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>We have several space launches departing daily, book flight today!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!--END PHOTOCONTAINER 3-->
+                <!--END PHOTO-CONTAINER 3-->
 
-            <!--PHOTO-CONTAINER 4-->
-            <div>
-                <div>
-                    <img src="./Images/Thumb/thumbnail_4.jpg" alt="Ooops! somthing is wrong. Try to reload the page or use another browser.">
-                    <div>
-                        <h3>Click to Enlarge</h3>
-                        <p>We have several space launches departing daily, book your flight.</p>
+                <!--PHOTO-CONTAINER 4-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./Images/Thumb/thumbnail_4.jpg" alt="">
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>We have several space launches departing daily, book flight today!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!--END PHOTOCONTAINER 4-->
+                <!--END PHOTO-CONTAINER 4-->
 
-            <!--PHOTO-CONTAINER 5-->
-            <div>
-                <div>
-                    <img src="./Images/Thumb/thumbnail_5.jpg" alt="Ooops! somthing is wrong. Try to reload the page or use another browser.">
-                    <div>
-                        <h3>Click to Enlarge</h3>
-                        <p>We have several space launches departing daily, book your flight.</p>
+                <!--PHOTO-CONTAINER 5-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./Images/Thumb/thumbnail_5.jpg" alt="">
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>We have several space launches departing daily, book flight today!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!--END PHOTOCONTAINER 5-->
+                <!--END PHOTO-CONTAINER 5-->
 
-            <!--PHOTO-CONTAINER 6-->
-            <div>
-                <div>
-                    <img src="./Images/Thumb/thumbnail_6.jpg" alt="Ooops! somthing is wrong. Try to reload the page or use another browser.">
-                    <div>
-                        <h3>Click to Enlarge</h3>
-                        <p>We have several space launches departing daily, book your flight.</p>
+                <!--PHOTO-CONTAINER 6-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./Images/Thumb/thumbnail_6.jpg" alt="">
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>We have several space launches departing daily, book flight today!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!--END PHOTOCONTAINER 6-->
+                <!--END PHOTO-CONTAINER 6-->
 
-            <!--PHOTO-CONTAINER 7-->
-            <div>
-                <div>
-                    <img src="./Images/Thumb/thumbnail_7.jpg" alt="Ooops! somthing is wrong. Try to reload the page or use another browser.">
-                    <div>
-                        <h3>Click to Enlarge</h3>
-                        <p>We have several space launches departing daily, book your flight.</p>
+                <!--PHOTO-CONTAINER 7-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./Images/Thumb/thumbnail_7.jpg" alt="">
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>We have several space launches departing daily, book flight today!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!--END PHOTOCONTAINER 7-->
+                <!--END PHOTO-CONTAINER 7-->
 
-            <!--PHOTO-CONTAINER 8-->
-            <div>
-                <div>
-                    <img src="./Images/Thumb/thumbnail_8.jpg" alt="Ooops! somthing is wrong. Try to reload the page or use another browser.">
-                    <div>
-                        <h3>Click to Enlarge</h3>
-                        <p>We have several space launches departing daily, book your flight.</p>
+                <!--PHOTO-CONTAINER 8-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./Images/Thumb/thumbnail_8.jpg" alt="">
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>We have several space launches departing daily, book flight today!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!--END PHOTOCONTAINER 8-->
+                <!--END PHOTO-CONTAINER 8-->
 
-            <!--PHOTO-CONTAINER 9-->
-            <div>
-                <div>
-                    <img src="./Images/Thumb/thumbnail_9.jpg" alt="Ooops! somthing is wrong. Try to reload the page or use another browser.">
-                    <div>
-                        <h3>Click to Enlarge</h3>
-                        <p>We have several space launches departing daily, book your flight.</p>
+                <!--PHOTO-CONTAINER 9-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./Images/Thumb/thumbnail_9.jpg" alt="">
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>We have several space launches departing daily, book flight today!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!--END PHOTOCONTAINER 9-->
-
+                <!--END PHOTO-CONTAINER 9-->
             </div>
         </div>
     </section>
     <!--END GALLERY-->
 
     <!--RSVP-->
-    <section>
-        <div id="contact">
-            <div>
-                <h1>Reservation</h1>
-                <div>
+    <section id="contact">
+        <div class="container">
+            <div class="heading-padding">
+                <h1 class="heading-padding">Reservations</h1>
+                <div class="reservation">
                     <h2><span>Your adventure is just around the moon.</span>
-                        <br />Reserve your flight today!
+                    <br/>Reserve your flight today!
                     </h2>
-                    <p>
-                        Please provide us with your basic contact information.
+                    <p class="rsvp-text">
+                        Please provide us your basic contact information.
                     </p>
-                    <div>
+                    <div class="form-rsvp">
                         <form action="" method="post">
-                            <input class="rsvp" type="text" value="First Name">
-                            <input class="rsvp" type="text" value="Last Name">
-                            <input class="rsvp" type="text" value="Email Adress">
-                            <input class="rsvp" type="text" value="Phone Number">
+                            <input class="rsvp" type="text" value="" placeholder="First Name">
+                            <input class="rsvp" type="text" value="" placeholder="Last Name">
+                            <input class="rsvp" type="text" value="" placeholder="Email Adress">
+                            <input class="rsvp" type="text" value="" placeholder="Phone Number">
                             <div class="form-spacer">
                                 <label class="terms">Terms and Conditions</label>
                             </div>
-                            <div>
+                            <div class="submit">
                                 <input type="submit" value="Submit">
                             </div>
                         </form>
@@ -181,8 +181,8 @@
     <!--END RSVP-->
 
     <!--FOOTER-->
-    <div>
-        www.thespacestation.space &nbsp;|&nbsp; &copy; 2016
+    <div id="footer">
+        www.thespacestation.space &nbsp;|&nbsp; &copy; 2024
     </div>
     <!--END FOOTER-->
 
